extras en froot wars

--- a/PL-BlutBad/client/templates/aiuto.html
+++ b/PL-BlutBad/client/templates/aiuto.html
@@ -36,7 +36,7 @@
 				</h4>
 				<p></p>
 				<h4 class="azul">
-					Si no te gustan las frutas tenemos el juego perfecto, juega con Froot War y véngate de ellas.
+					Si quieres bajar de peso, Froot Wars es tu juego ideal, junto con las frutas acabarás con la comida basura. Si quieres extras en este juego ya que te aburre su facilidad después de horas de vicio accede a premium con todos los puntos que has obtenido.
 				</h4>
 				<p></p>
 				<h4 class="verde">
@@ -55,7 +55,7 @@
 				</h4>
 				<p></p>
 				<h4 class="azul">
-					Para cualquier duda o sugerencia contacta con nuestro servicio técnico en <a href="mailto:itziar276@live.com" target="_blank">admin@blutbad.com</a> o por teléfono al: <a href="tel:+34912345678">(+34)912345678</a>, o si lo prefiere por Skype o cualquier sistema de mensajería instantánea al <a href="callto://+34678912345"> +(34)678912345</a>.
+					Para cualquier duda o sugerencia contacta con nuestro servicio técnico en <a href="mailto:itziar276@live.com" target="_blank">admin@blutbad.com</a> o por teléfono al: <a href="tel:+34912345678">(+34)91-2345-678</a>, o si lo prefiere por Skype o cualquier sistema de mensajería instantánea al <a href="callto://+34678912345"> +(34)678-912-345</a>.
 				</h4>
 			</div>
 		</div>
