--- a/PL-BlutBad/client/templates/terminos.html
+++ b/PL-BlutBad/client/templates/terminos.html
@@ -15,7 +15,7 @@
 					Si el interesado no indica lo contrario, la remisión de sus datos supone la prestación del consentimiento para el tratamiento de los mismos, así como para que BlutBad SL. o cualquier otra empresa del grupo pueda remitirle comunicaciones publicitarias o promocionales por cualquier medio, en los términos establecidos por la Ley 34/2002, de Servicios de la Sociedad de la Información y de Comercio Electrónico. En todo caso, el interesado puede, en cualquier momento, revocar el consentimiento prestado para recibir comunicaciones comerciales. 
 				</p>
 				<p>
-					El interesado podrá en cualquier momento ejercer los derechos de acceso, rectificación, cancelación y oposición comunicándolo por escrito al domicilio social de BlutBad, Avenida de la ISI 99 P, Planta 1, 28046 Madrid, <a href="tel:+34912345678">telf (+34)912345678, </a> <a href="callto://+34678912345">Skype: +34 678912345</a>
+					El interesado podrá en cualquier momento ejercer los derechos de acceso, rectificación, cancelación y oposición comunicándolo por escrito al domicilio social de BlutBad, Avenida de la ISI 99 P, Planta 1, 28046 Madrid, <a href="tel:+34912345678">telf (+34)91-2345-678, </a> <a href="callto://+34678912345">Skype: +34 678-912-345</a>
 				</p>
 
 				<h2>CONSIDERACIONES GENERALES</h2>
