arreglado css de tienda

--- a/PL-BlutBad/client/templates/shop.html
+++ b/PL-BlutBad/client/templates/shop.html
@@ -24,7 +24,7 @@
 						Total <img src="/images/isi-coin.jpg" alt="ISI-Coin" width="100" height="100" />: {{isicoins}}
 					</h2> 
 					{{#if icambiar}}
-						<input type="button" id="ichange" value="Cambiar 100 puntos por 1 <img src="/images/isi-coin.jpg" alt="ISI-COIN" width="32" height="32" />"> 
+						<input type="button" id="ichange" value="Cambiar 100 puntos por 1 ISI-COIN"> 
 					{{/if}}
   					<p></p>
 					<h2>Bonos disponibles: </h2>
